--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "LoadTensorDecompositions"
 uuid = "bae27b42-c72a-5733-8f2d-201965195bfc"
 authors = ["Velimir V Vesselinov (monty) <velimir.vesselinov@gmail.com>"]
-version = "1.0.0"
+version = "1.0.1"
 
 [deps]
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
@@ -10,7 +10,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 
 [compat]
 FileIO = "1"
-JLD = "0.10, 0.11"
+JLD = "0.10, 0.11, 0.12"
 JLD2 = "0.2, 0.3"
 julia = "1.5"
 
