--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 [compat]
 FileIO = "1"
 JLD = "0.10, 0.11, 0.12, 0.13, 0.14, 1"
-JLD2 = "0.2, 0.3, 0.4, 0.5, 1"
+JLD2 = "0.2, 0.3, 0.4, 0.5, 0.6, 1"
 julia = "1.8"
 
 [extras]
